# HUniversal-Camera

./: .gitignore  CMakeLists.txt  Deltalens-autumn.xml  manifest.xml
Libraries/camera/include/: Camera.h  CameraNode.h
Libraries/camera/src/: Camera.cpp
Libraries/include/: Camera.h
cmake/: ExternalLibraries.cmake  macros.cmake
libraries/: CMakeLists.txt  LibrariesExport.cmake
libraries/camera/: CMakeLists.txt
libraries/camera/include/Camera/: RectifyImage.h  camera.h  unicap_cv_bridge.h
libraries/camera/src/: Camera.cpp  RectifyImage.cpp  unicap_cv_bridge.cpp
libraries/unicap/: CMakeLists.txt
libraries/unicap/src/: unicap_cv_bridge.cpp
libraries/utilities/include/Utilities/: Utilities.h
ros/: CMakeLists.txt
ros/cameraControlNode/: CMakeLists.txt  manifest.xml
ros/cameraControlNode/include/CameraControlNode/: CameraControlNode.h
ros/cameraControlNode/src/: CameraControlNode.cpp
ros/cameraNode/: CMakeLists.txt  manifest.xml
ros/cameraNode/include/CameraNode/: CameraNode.h  Services.h  cameranode.h  services.h
ros/cameraNode/src/: CameraNode.cpp  cameranode.cpp  main.cpp
src/: CameraNode.cpp  main.cpp
tools/: CMakeLists.txt
tools/CameraCalibration/src/: CameraCalibration.cpp
